@@ -2,6 +2,9 @@
   Changes with Apache Traffic Server 3.3.3
 
 
+  *) [TS-1867] The combo_handler plugin crashes when receiving non-200 responses.
+    Author: Conan Wang <conanmind@gmail.com>
+
   *) [TS-1838] Improve configure.ac to recognize compiler setup better.
 
   *) [TS-1865] Support DESTDIR in tsxs.
